# northstar-bank

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  eslint.config.mjs  package.json
.github/workflows/: ci.yaml
app/: BankDashboard.tsx  globals.css  layout.tsx  page.tsx
app/api/accounts/: route.ts
app/api/transfers/: route.ts
app/health/live/: route.ts
app/health/ready/: route.ts
app/lib/: core-api.ts
docs/: continuous-integration.md  developer-handoff.md  devops-roadmap.md
infra/bootstrap/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  variables.tf
infra/environments/dev/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
k8s/dev/: configmap.yaml  core-api.yaml  ingress.yaml  namespace.yaml  postgresql.yaml  secret.local.yaml.example  storageclass.yaml  web.yaml
services/core-api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
services/core-api/app/: __init__.py  config.py  database.py  logging_config.py  main.py  metrics.py  models.py  schemas.py  services.py
services/core-api/migrations/: env.py
services/core-api/migrations/versions/: 0001_initial_schema.py
services/core-api/scripts/: seed.py
services/core-api/tests/: test_health.py  test_schemas.py
tests/: dashboard.test.mjs
