[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "northstar-core-api"
version = "0.1.0"
description = "Core accounts and transaction API for Northstar Bank"
requires-python = ">=3.12"
dependencies = [
  "alembic==1.16.5",
  "fastapi==0.116.1",
  "prometheus-client==0.22.1",
  "psycopg[binary]==3.2.10",
  "pydantic-settings==2.10.1",
  "sqlalchemy==2.0.43",
  "uvicorn[standard]==0.35.0",
]

[tool.setuptools]
packages = ["app"]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "ruff==0.12.9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
